<?xml version="1.0" encoding="utf-8"?>
<!--
Keyring for Android
Copyright (C) 2011 Ron Riley
(android.keyring@gmail.com)

Keyring for Android is based on: 

KeyringEditor
Copyright 2004 Markus Griessnig
Vienna University of Technology
Institute of Computer Technology

KeyringEditor is based on:
Java Keyring v0.6
Copyright 2004 Frank Taylor <keyring@lieder.me.uk>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->



<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10px"
    android:gravity="left"
    android:stretchColumns="1">
	<TableRow>
     <TextView android:id="@+id/length"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/label_length"
              />
              </TableRow>
              <TableRow>
               <RadioGroup
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <RadioButton android:id="@+id/radio_4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="4" />
      <RadioButton android:id="@+id/radio_8"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="8" />
      <RadioButton android:id="@+id/radio_10"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="10" />
      <RadioButton android:id="@+id/radio_16"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="16" />
      <RadioButton android:id="@+id/radio_20"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="20" />
    </RadioGroup>
   	</TableRow>
    <TableRow
    android:layout_width="fill_parent"
    >
    <!--  include a-z A-Z 0-9 !@$  aYen copyright -->
    <!--  generate cancel -->
    
         <TextView android:id="@+id/include"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/include"
              />
              </TableRow>
              <TableRow android:layout_width="fill_parent">
              <LinearLayout android:layout_height="wrap_content">
              
               <CheckBox android:id="@+id/checkbox_lowercase_letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="a-z" />
        
               <CheckBox android:id="@+id/checkbox_uppercase_letters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A-Z" />  
        
        <CheckBox android:id="@+id/checkbox_digits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0-9" />  
<!--         </LinearLayout>-->
  
               <CheckBox android:id="@+id/checkbox_symbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="!@$" />
<!--                               <CheckBox android:id="@+id/checkbox_symbols"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="ä¥©" />-->
        </LinearLayout>        
        </TableRow>
        

        
       <!--  include a-z A-Z 0-9 !@$  aYen copyright -->
        

    <TableRow>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1">
    <TableRow>
     <Button 
         android:id="@+id/button_generate" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:text="@string/generate"
    />
     <Button 
         android:id="@+id/button_cancel" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:text="@string/cancel"
    />
    </TableRow>
</TableLayout>
</TableRow>
   
</TableLayout>